fix form align

--- a/Szalloda/public/css/regisztracio.css
+++ b/Szalloda/public/css/regisztracio.css
@@ -12,6 +12,8 @@
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .form-design .inputItem{
